<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AgendaSESC</string>
    <string name="action_options_facilities">Unidades</string>
    <string name="action_options_date">Data</string>
    <string name="action_options_about">Sobre</string>
    <string name="action_options_event">Programação/Curso</string>
    <string name="action_settings">Settings</string>
    <string name="unidade_sesc">Santo André</string>
    <string name="sesc_program_agenda">Programação de hoje</string>
    <string name="sesc_about_app">Sobre o aplicativo</string>
    <string name="menu_settings">Definições</string>
    <string name="menu_atividades">Atividades</string>
    <string name="menu_unidades">Unidades</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_search">Procurar</string>
    <string name="title_activity_page_view">AgendaSESC</string>
    <string name="title_activity_select_category">Escolha as categorias</string>
    <string name="splash_disclaimer">Este aplicativo é uma produção particular e independente, utilizando os dados fornecidos pelo site do <u>SESC São Paulo</u>.\n\n<i>Autor: Steffen Retzlaff</i></string>
    <string name="title_activity_select_facility">Escolha as unidades</string>
    <string name="hello_world">Hello world!</string>

</resources>